# otter

./: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  README.md
otter/: CMakeLists.txt
otter/include/otter/support/: CMakeLists.txt  build.hh  core.hh  error_handling.hh  math.hh  memory.hh  traits.hh  vector.hh
otter/lib/: CMakeLists.txt
otter/lib/support/: CMakeLists.txt
otter/lib/support/include/otter_support/: CMakeLists.txt  os.hh
otter/lib/support/src/: CMakeLists.txt  core.cc  core_win32.cc  error_handling.cc  memory.cc  memory_win32.cc
otter/samples/sandbox/: CMakeLists.txt
otter/samples/sandbox/exe/: CMakeLists.txt  main.cc
otter/samples/sandbox/src/: main.cc
